debugging get brewery

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 </head>
 <body>
 
-    <div class="w3-card" id='map'> </div>
+    <div class="w3-container" id='map'> </div>
 
     <div id="sidebar">
         <div class="w3-bar w3-black">
