--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
                 </li>
             </ul>
         </div>
-        <div id="brewery" class="w3-container w3-card Tab w3-margin-top">
-                <table class="w3-table-all" id="brewery_select" style="width:100%"> </table>
+        <div id="brewery" class="w3-card Tab w3-margin-top">
+                <div class="w3-table-all" id="brewery_select" style="width:100%"> </div>
         </div>
 
         <div id="about" class="w3-container w3-card Tab w3-margin-top">
